<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.MakeSelection"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_back_icon"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_detail"
            android:textSize="18sp"
            android:fontFamily="@font/muli" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/field_mobile_phone_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mobile_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_phone_number"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/flag_transparent"
                android:onClick="callVerifyOTP"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:padding="10dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/field_email_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_email"
                android:textSize="25sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/email_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/email_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_email_address"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/email_icon"
                android:layout_below="@id/email_title" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/flag_transparent"
                android:onClick="callVerifyOTP"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>